--- a/src/Components/Hamburger/Hamburger.css
+++ b/src/Components/Hamburger/Hamburger.css
@@ -7,7 +7,7 @@
     height: 0.2rem;
     margin: 0.2rem;
     border-radius: 15px;
-    border: 1px solid black;
+    border: 1px solid rgba(88, 88, 88, 0.8);
     transform-origin: center;
 }
 
