--- a/src/Components/Mouse/Mouse.css
+++ b/src/Components/Mouse/Mouse.css
@@ -1,25 +1,34 @@
 .outerMouse {
-   
     border-radius: 50%;
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.innerMouse {
-    width: 0.4rem;
-    height: 0.4rem;
-    border-radius: 50%;
+.tag {
+    width: 3rem;
+    height: 1rem;
     background-color: black;
+    color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
     position: absolute;
 }
+
+.tagInstruction {
+    font-size: 0.8rem;
+}
+
+
 
 @media only screen and (max-width: 900px) {
     .outerMouse {
         display: none;
     }
-    .innerMouse {
+    .tag {
         display: none;
     }
 }   
