Add Banner component

--- a/src/Components/Mouse/Mouse.css
+++ b/src/Components/Mouse/Mouse.css
@@ -1,9 +1,10 @@
 .outerMouse {
     border-radius: 50%;
-    position: relative;
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: -1;
 }
 
 .tag {
