--- a/src/Components/Hamburger/Hamburger.css
+++ b/src/Components/Hamburger/Hamburger.css
@@ -1,4 +1,5 @@
 .hamburger {
+    display: none;
     cursor: pointer;
 }
 
@@ -9,5 +10,11 @@
     border-radius: 15px;
     border: 1px solid rgba(88, 88, 88, 0.8);
     transform-origin: center;
+}
+
+@media only screen and (max-width: 900px) {
+    .hamburger {
+        display: block;
+    }
 }
 
