--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,12 +1,20 @@
 .navbarContainer {
-    width: 100%;
-    height: 4rem;
+    width: 95%;
+    height: 10vh;
     border: 1px solid rgba(88, 88, 88, 0.3);
-    position: fixed;
-    top: 0;
     display: flex;
     align-items: center;
-    padding: 0 1rem;
+    justify-content: space-between;
+    padding: 0 2.5%;
+    overflow: hidden;
+}
+
+.logo {
+    font-size: 2rem;
+    font-weight: 600;
+    font-family: 'Sora', sans-serif;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
 }
 
 .navbarLinks {
@@ -14,4 +22,11 @@
     display: flex;
     justify-content: space-around;
     list-style-type: none;
+}
+
+.left, 
+.right {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
