--- a/src/Components/Background/Background.css
+++ b/src/Components/Background/Background.css
@@ -1,8 +1,13 @@
 
 .background {
     font-size: 22rem;
-    color: rgba(58, 58, 58, 0.1);
+    color: rgba(133, 133, 133, 0.1);
+    margin: 0 2rem;
+}
+
+.backgroundContainer {
     position: fixed;
     top: 20rem;
-    z-index: -50;
+    padding-left: 90rem;
+    z-index: -100
 }
