--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -7,7 +7,8 @@
     justify-content: center;
     flex-direction: column;
     overflow: hidden;
-    position: relative
+    position: relative;
+    border: 1px solid rgba(88, 88, 88, 0.3);
 }
 
 .heroText {
