--- a/src/Components/NavButton/NavButton.css
+++ b/src/Components/NavButton/NavButton.css
@@ -27,3 +27,11 @@
     color: rgb(88, 88, 88);
     font-size: 1.2rem;
 }
+
+@media only screen and (max-width: 900px) {
+    .buttonContainer a {
+        color: rgb(31, 31, 31);
+        font-size: 1.4rem;
+        font-weight: 600;
+    }
+}
