--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -16,11 +16,16 @@
     color: rgb(0, 0, 0);
 }
 
-.navbarLinks {
+.navbarLinks, 
+.mobileLinks {
     width: 50%;
     display: flex;
     justify-content: space-around;
     list-style-type: none;
+}
+
+.mobileLinks {
+    display: none;
 }
 
 .left, 
@@ -43,8 +48,9 @@
         align-items: flex-start;
         overflow: hidden;
     }
-
-    .navbarLinks {
+    
+    .mobileLinks,
+    .mobileLinks {
         position: fixed;
         top: 10vh;
         right: 0;
@@ -52,5 +58,10 @@
         padding: 0;
         margin: 0;
         flex-direction: column; 
+        display: flex;
+    }
+
+    .navbarLinks {
+        display: none;
     }
 }
