--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -58,6 +58,24 @@
     margin: 1rem 0.2rem;
 }
 
+.githubWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(88, 88, 88, 0.3);
+    backdrop-filter: blur(4px);
+    background-color: rgba(58, 58, 58, 0.1);
+    width: 80%;
+    padding: 2rem 1rem;
+    border-radius: 15px;
+    cursor: pointer;
+    margin: 2rem;
+}
+
+.githubWrapper:hover {
+    background-color: rgba(58, 58, 58, 0.4);
+}
+
 @media only screen and (max-width: 1110px) {
     .projectsContainer {
        justify-content: center;
